Finished implementation of adding custom labels